--- a/package.json
+++ b/package.json
@@ -22,3 +22,32 @@
     "express": "^4.16.2"
   }
 }
+
+
+
+
+
+{
+  "name": "WeatherApp",
+  "version": "0.1.1",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Infra3/WeatherApp.git"
+  },
+  "author": "Samip",
+  "license": "MIT",
+  "bugs": {
+    "url": ""
+  },
+  "homepage": "https://github.com/Infra3/WeatherApp#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
+  }
+}
