--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "WeatherApp",
   "version": "0.1.1",
-  "description": "This is a webhook for a weather app built using dialogflow (api.ai) of google",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SupratikRulz/webhook-dialogflow-weatherinfo-app.git"
+    "url": "git+https://github.com/Infra3/WeatherApp.git"
   },
-  "author": "Supratik Basu",
+  "author": "Samip",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/SupratikRulz/webhook-dialogflow-weatherinfo-app/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/SupratikRulz/webhook-dialogflow-weatherinfo-app#readme",
+  "homepage": "",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2"
