--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "express": "^4.16.3",
+    "google-translate-api": "^2.3.0"
   }
 }
